--- a/Ejercicio_03/index.html
+++ b/Ejercicio_03/index.html
@@ -9,8 +9,10 @@
 <body>
     <input type="number" >
     <button>Submit</button>
-    <h2></h2>
-    <h4></h4>
+    <div class="card">
+        <h2></h2>
+        <h4></h4>
+    </div>  
     <script src="script.js"></script>
 </body>
 </html>
