--- a/Ejercicio_03/index.html
+++ b/Ejercicio_03/index.html
@@ -5,14 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 3 Eventos y manipulación del DOM</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <input type="number" >
-    <button>Submit</button>
-    <div class="card">
-        <h2></h2>
-        <h4></h4>
-    </div>  
+    <main>
+        <div class="container">
+            <h1>Elija su pizza</h1>
+            <div class="input-card">               
+                    <input type="number" >
+                    <button>Submit</button>
+            </div>
+            <div class="card">  
+                <h2></h2>
+                <h4></h4>
+            </div>  
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
