Creando function FindID

--- a/Ejercicio_04/index.html
+++ b/Ejercicio_04/index.html
@@ -13,7 +13,7 @@
         <div class="card-container">
             <div class="card">
                 <h3 class="pizza-name"></h3>
-                <img class="pizza-img">
+                <img class="pizza-img" src="">
                 <p class="pizza-ing"></p>
                 <p class="price"></p>
             </div>
