--- a/Ejercicio_04/index.html
+++ b/Ejercicio_04/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Ejercicio 4</title>
@@ -16,6 +20,7 @@
                 <img class="pizza-img" src="">
                 <p class="pizza-ing"></p>
                 <p class="price"></p>
+                <p class="error"></p>
             </div>
             <form id="ID-form">
                 <input type="number" id="id-input">
