--- a/Ejercicio_04/index.html
+++ b/Ejercicio_04/index.html
@@ -18,12 +18,12 @@
             <div class="card">
                 <h3 class="pizza-name"></h3>
                 <img class="pizza-img" src="">
-                <p class="pizza-ing"></p>
+                <ul class="pizza-ing"></ul>
                 <p class="price"></p>
                 <p class="error"></p>
             </div>
             <form id="ID-form">
-                <input type="number" id="id-input">
+                <input type="number" id="id-input" min="1">
                 <button type="submit" id="submit-btn">Submit</button>
             </form>
         </div>     
