--- a/Ejercicio_05/index.html
+++ b/Ejercicio_05/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <main>
+        <div>
+            <form class="search-pizza">
+                <input type="text" class="search-input">
+                <button type="submit">Search</button>
+            </form>    
+        </div>
         <div class="container-card">
         </div>
     </main>
