--- a/Ejercicio_05/index.html
+++ b/Ejercicio_05/index.html
@@ -16,6 +16,9 @@
                 <button type="submit">Search</button>
             </form>    
         </div>
+        <div class="empty-input">
+            <p>No deje el input vacio</p>
+        </div>
         <div class="container-card">
         </div>
     </main>
