Agregando mensaje de input vacio y boton para mostrar pizzas

--- a/Ejercicio_05/index.html
+++ b/Ejercicio_05/index.html
@@ -14,7 +14,8 @@
             <form class="search-pizza">
                 <input type="text" class="search-input">
                 <button type="submit">Search</button>
-            </form>    
+            </form>  
+            <button class="clean-button">Mostrar pizzas</button>  
         </div>
         <div class="empty-input">
             <p>No deje el input vacio</p>
