--- a/Ejercicio_05/index.html
+++ b/Ejercicio_05/index.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet"> 
+
     <link href="style.css" rel="stylesheet" type="text/css">
     <title>Ejercicio 5, Renderizar HTML</title>
 </head>
 <body>
     <main>
-        <div>
+        <div class="form-container">
             <form class="search-pizza">
+                <h2>Buscar Pizza</h2>
                 <input type="text" class="search-input">
-                <button type="submit">Search</button>
+                <button type="submit">Buscar</button>
             </form>  
             <button class="clean-button">Mostrar pizzas</button>  
         </div>
